# interactiveai-ai-engineer-task

./: .env.example  .gitignore  Dockerfile  README.md  api.py  content_generation.py  content_validation.py  docker-compose.yml  main.py  models.py  pyproject.toml  ui.py  workflow_graph.html
example/: example.html  input_case1.json  input_case1_bad.json  input_case2.json  input_case2_bad.json  input_case3.json  input_case3_bad.json  input_case4.json  input_case4_bad.json  input_case5.json  input_case5_bad.json  input_example.json
llm_config/: llm_config.py  llm_prompt.txt  output_template.py
utils/: analysis.py  file_system.py
validation_config/: llm_valid_prompt.txt  valid_config.py  valid_lang_phrases.py
