[project]
name = "interactiveai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=1.1.0",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "ipython>=8.37.0",
    "grandalf>=0.8",
    "streamlit>=1.51.0",
    "fastapi[standard]>=0.122.0",
    "langsmith>=0.4.49",
]
